Add UI to webpage

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="rps.css" rel="stylesheet">
     <title>Rock Paper Scissor GAME</title>
 </head>
 <body>
+    <div class="rock-paper-scissor">
+        <button class="rock"><img src="pics/rock.png" width="215" height="185"></button>
+        <button class="paper"><img src="pics/paper.png" width="200" height="170"></button>
+        <button class="scissors"><img src="pics/scissors.png" width="200" height="170"></button>
+    </div>
+    <div id="text"></div>
     <script src="rock-paper-scissor.js"></script>
+
 </body>
 </html>
